# svm

./: .gitignore  SonicCD-LivBss_archive.torrent  anisotropica.py  classification.py  cnn_test.py  cuda.py  database.db  dicom_alt.py  extract_roi.py  extract_roi2.py  lol.py  main.py  mark_points.py  opencv_test.py  package-lock.json  preprocess.py  pyproject.toml  read_dcm.py  read_dcm_and_classificate.py  read_png.py  svm.py  svm_sklearn.py  train_and_test.py
classifier/: __init__.py  base_preprocess.py  inbreast.py  inbreast_cnn.py  preprocess.py  train_and_test.py
