[tool.poetry]
name = "mammography-classifier"
version = "0.1.0"
description = ""
authors = ["Fhilipe Coelho <fhilipecoelho.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
pydicom = "^3.0.1"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
opencv-cuda = "^0.0.2"
pylibjpeg = { extras = ["all"], version = "^2.0.1" }
python-gdcm = "^3.0.24.1"
tensorflow = { extras = ["and-cuda"], version = "^2.18.0" }
pyqt6 = "^6.8.0"
tk = "^0.1.0"
cupy-cuda12x = "^13.3.0"
fastapi = {extras = ["standard"], version = "^0.115.11"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
